Test thread pooling

--- a/evaluation/src/makefile
+++ b/evaluation/src/makefile
@@ -1,6 +1,6 @@
 
 main: clean
-	gcc -DSHIFTOR -DINC_INSERT -o main main.c -lgmp -lpthread
+	gcc -DSHIFTOR -DINC_INSERT -o main main.c tpool.c -lgmp -lpthread
 
 no_insert: clean
 	gcc -DSHIFTOR -DDEBUG -o main main.c -lgmp
