--- a/evaluation/src/makefile
+++ b/evaluation/src/makefile
@@ -2,7 +2,6 @@
 main: clean
 	gcc -DSHIFTOR -o main main.c tpool.c -lgmp -lpthread
 
-
 and: clean
 	gcc -o main main.c tpool.c -lgmp -lpthread
 
@@ -11,6 +10,10 @@ or2: clean
 
 or3: clean
 	gcc -DSHIFTOR -DCONSTRAINTS2 -o main main.c tpool.c -lgmp -lpthread
+
+read: clean
+	gcc -DREADCAND -o main main.c tpool.c -lgmp -lpthread
+
 
 debug: clean
 	gcc -DSHIFTOR -DDEBUG -DDEBUG_SEARCH -DINC_INSERT -o main main.c tpool.c -lgmp -lpthread
